[gd_scene load_steps=7 format=2]

[ext_resource path="res://source/ability_system/scenes/area_ability/AreaAbility.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=10]

[sub_resource type="SpatialMaterial" id=7]
vertex_color_use_as_albedo = true

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0, 0.5 ), 0.0, 0.0, 0, 0, Vector2( 0.5, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=9]
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.914062, 0, 1 )

[node name="AreaAbility" type="Area"]
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.15, 0 )
shape = SubResource( 10 )

[node name="CPUParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.05176e-05 )
amount = 200
lifetime = 0.5
fract_delta = false
mesh = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 1.0
flag_align_y = true
flag_rotate_y = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
damping = 2.0
scale_amount_curve = SubResource( 11 )
color_ramp = SubResource( 9 )

[node name="LifetimeTimer" type="Timer" parent="."]

[node name="TickTimer" type="Timer" parent="."]

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
